--- a/public/css/mostrarOng.css
+++ b/public/css/mostrarOng.css
@@ -1,3 +1,10 @@
-ul{
+.ulOng{
     list-style-type: none;
+    border: 3px solid green;
+    display: inline-block;
+    padding: 1em;
+    margin: 1em 2em;
+    font-size: 30px;
+    border-radius: 15%;
+
 }
