CSS na pagina de procurar ong

--- a/public/css/mostrarOng.css
+++ b/public/css/mostrarOng.css
@@ -22,3 +22,11 @@ img{
 .w3-row{
     text-align: center;
 }
+
+.text{
+    display: block;
+    width: 300px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
