--- a/public/css/mostrarOng.css
+++ b/public/css/mostrarOng.css
@@ -30,3 +30,19 @@ img{
     white-space: nowrap;
     text-overflow: ellipsis;
 }
+
+
+@media only screen and (max-width: 768px) {
+    .ulOng{
+        font-size: 20px;
+        width: 80%;
+        height: 50%;
+        padding: 0%;
+        padding-top: 2%;
+    }
+
+    .name{
+        
+    }
+
+  }
